--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/styles.css"> 
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <script src="script/scroll.js" defer></script>
+    <script src="script/odometer.js" defer></script>
     <title>Titan Gym</title>
 </head>
 <body >
@@ -49,31 +50,54 @@
            <!-- FIRST SECTION -->
            <section class="first-section">
             <div class="stats-container">
-  <div class="stat-box">
-    <i class="bx bx-dumbbell"></i>
-    <h2 class="counter" data-target="2260">0</h2>
-    <p>Members</p>
-  </div>
+                        <div class="odometer">
+                             <div class="stat-box">
+                      <i class="bx bx-dumbbell"></i>
+                         <div class="stat-text">
+                          <h2 class="counter" data-target="2260">0</h2>
+                       <p>Members</p>
+                   </div>
+                  </div>
 
-  <div class="stat-box">
-    <i class="bx bx-bicycle"></i>
-    <h2 class="counter" data-target="210">0</h2>
-    <p>Daily Visitors</p>
-  </div>
+                    <div class="stat-box">
+                        <i class='bx bx-cycling'></i> 
+                           <div class="stat-text">
+                             <h2 class="counter" data-target="210">0</h2>
+                             <p>Daily Visitors</p>
+                         </div>
+                     </div>
 
-  <div class="stat-box">
-    <i class="bx bx-chili"></i>
-    <h2 class="counter" data-target="887">0</h2>
-    <p>Health Program</p>
-  </div>
+                      <div class="stat-box">
+                              <i class='bx  bx-pulse'  ></i> 
+                                  <div class="stat-text">
+                                   <h2 class="counter" data-target="887">0</h2>
+                                 <p>Health Program</p>
+                            </div>
+                        </div>
 
-  <div class="stat-box">
-    <i class="bx bx-heart"></i>
-    <h2 class="counter" data-target="1920">0</h2>
-    <p>Heart Beat</p>
-  </div>
-</div>
+                         <div class="stat-box">
+                              <i class="bx bx-heart"></i>
+                                 <div class="stat-text">
+                                   <h2 class="counter" data-target="1920">0</h2>
+                                 <p>Heart Beat</p>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="grid-text-card">
+                                <div class="caption-text">
+                                    <h2>Step Up Your Fitness</h2>
+                                    <p>
+                                        Welcome to Step Up Your Fitness – where your transformation begins. We are more than just a gym. We are a community that believes in progress, strength, and pushing past limits. Whether you're looking to burn fat, build muscle, boost endurance, or simply feel better in your own skin, we’re here to help you rise — step by step.
+                                    </p>
+                                </div>
+                                 <div class="img-box">
+                                    <img src="images/img-gym.jpeg" alt="Gym Image">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
            </section>
+
     </div>
 </body>
 </html>
