i did some change in style

--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
                 <button data-day="friday">Friday</button>
                 <button data-day="sunday">Sunday</button>
             </div>
-            <table class="schedule-table" data-day="monday">
+           <div class="table-container">
+             <table class="schedule-table" data-day="monday">
                         <thead>
                             <tr>
                             <th>Class</th><th>Time</th><th>Trainer</th><th>Register</th>
@@ -496,6 +497,7 @@
                             </tr>
                         </tbody>
                      </table>
+           </div>
             </section>
             <!-- TRAINERS SECTION  -->
             <section id="trainers" class="train-section">
